# gydict

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README-PL.md  README.md  aclocal.m4  autogen.sh  configure  configure.ac  gydict.doap  meson.build  meson_options.txt  org.gnome.Gydict.json
contrib/egg/: Makefile.am  meson.build
contrib/pattern/: Makefile.am  g-observable.c  g-observable.h  g-observer.c  g-observer.h  g-pattern-types.h  g-pattern.h  meson.build
contrib/pnl/: Makefile.am  meson.build  pnl-dock-bin.c
data/: Makefile.am  Makefile.in  gydict.desktop.in.in  libgydict.pc.in  meson.build  org.gtk.gydict.dockbin.gschema.xml  org.gtk.gydict.gschema.xml  org.gtk.gydict.in.in  org.gtk.gydict.service.in  org.gtk.gydict.workspace.gschema.xml
libgydict/: Makefile.am  gy-dict-debug.h  gydict.h  meson.build
libgydict/app/: gy-app.c  gy-app.h  meson.build
libgydict/css/: gy-css-provider.h  meson.build
libgydict/deflist/: gy-def-list.c  gy-def-list.h
libgydict/dictionaries/: gy-depl.c  gy-dict-history.c  gy-dict-history.h  gy-dict-manager.c  gy-dict-manager.h  gy-dict.c  gy-dict.h  gy-english-pwn.c  gy-german-pwn.c  gy-parsable.c  gy-parsable.h  gy-pwn-dict.c
libgydict/entrylist/: gy-tree-view.c  gy-tree-view.h
libgydict/entryview/: gy-text-buffer.c  gy-text-buffer.h  gy-text-view.c  gy-text-view.h
libgydict/helpers/: gy-utility-func.c
libgydict/history/: gy-history-iterable.h  gy-history.c
libgydict/preferences/: gy-preferences-window.c  meson.build
libgydict/resources/: gy.gresource.xml  meson.build
libgydict/resources/css/: Adwaita-dark.css  Adwaita-shared.css  Adwaita.css  Default.css
libgydict/resources/ui/: gy-header-bar.ui  gy-lex-search-box.ui  gy-menus.ui  gy-preferences-page-general.ui  gy-preferences-switch.ui  gy-searchbar.ui  gy-shortcuts-window.ui  gy-window.ui  gy-workspace.ui
libgydict/search/: gy-search-bar.c  gy-search-bar.h
libgydict/shortcuts/: gy-shortcuts-window.c  meson.build
libgydict/window/: gy-header-bar.c  gy-header-bar.h  gy-lex-search-box.c  gy-lex-search-box.h  gy-window-settings.h  gy-window.c  gy-window.h  gy-workspace.c
src/: Makefile.am  Makefile.in  config.h.in  config.h.in~  dialog-pref.ui  gy-app.c  gy-app.h  gy-css-provider.c  gy-depl.c  gy-depl.h  gy-dialog-pref.c  gy-dialog-pref.h  gy-dict.c  gy-dict.h  gy-english-pwn.c  gy-english-pwn.h  gy-enum-types.c  gy-enum-types.h  gy-german-pwn.c  gy-german-pwn.h  gy-history-iterable.c  gy-history-iterable.h  gy-history.c  gy-history.h  gy-main.c  gy-parser-pwn.c  gy-parser-pwn.h  gy-parser.c  gy-parser.h  gy-preferences-file-chooser.c  gy-preferences-page-dicts.c  gy-preferences-page-general.c  gy-preferences-page.c  gy-preferences-page.h  gy-preferences-switch.c  gy-preferences-window.c  gy-print-compositor.c  gy-print-compositor.h  gy-print.c  gy-print.h  (+27 more)
src/contrib/: Makefile.am
src/contrib/egg/: meson.build
src/contrib/pattern/: g-observable.h  g-observer.c  g-observer.h
src/contrib/pnl/: meson.build
src/contrib/shortcuts/: Makefile.am  gb-accel-label.c  gb-shortcuts-dialog.c  gb-shortcuts-window.c  gb-widget.c  gb-widget.h  gy.resource.xml  shortcuts-window.ui
src/libgydict/: Gydict-1.0.metadata  gy-dict-debug.h  gy-enum-types.c.template  gy-enum-types.h.template  gydict.h  meson.build
src/libgydict/app/: gy-app-actions.c  gy-app-addin.c  gy-app-addin.h  gy-app-cmd-line.c  gy-app-plugins.c  gy-app-private.h  gy-app-shortcuts.c  gy-app.c  gy-app.h  meson.build
src/libgydict/css/: gy-css-provider.c
src/libgydict/deflist/: gy-def-list.c  gy-def-list.h  meson.build
src/libgydict/dictionaries/: gy-dict-manager-addin.c  gy-dict-manager-addin.h  gy-dict-manager.c  gy-dict-manager.h  gy-dict-provider-addin.c  gy-dict-provider-addin.h  gy-dict-provider.c  gy-dict-provider.h  gy-dict.c  gy-dict.h  gy-english-pwn.h  gy-entry-collector.c  gy-entry-collector.h  gy-german-pwn.h  gy-parser-pwn.h  gy-pwn-dict.c  gy-pwn-dict.h  meson.build
src/libgydict/entryview/: gy-text-buffer-private.h  gy-text-buffer.c  gy-text-buffer.h  gy-text-view.c  gy-text-view.h  meson.build
src/libgydict/gui/: gy-def-list.c  gy-def-list.h  gy-greeting-presenter.c  gy-greeting-presenter.h  gy-greeting-view.c  gy-greeting-view.h  gy-header-bar.h  gy-search-bar.c  gy-text-buffer.c  gy-text-buffer.h  gy-text-view.c  gy-window-actions.c  gy-window-addin.c  gy-window-plugins.c  gy-window-private.h  gy-window-settings.c  gy-window-settings.h  gy-window.c  gy-window.h  meson.build
src/libgydict/helpers/: gy-dict-data-scheme.c  gy-dict-data-scheme.h  gy-format-scheme.c  gy-format-scheme.h  gy-plugins.c  gy-plugins.h  gy-print-compositor.c  gy-text-attribute.c  gy-text-attribute.h  gy-utility-func.c  gy-utility-func.h  meson.build
src/libgydict/preferences/: gy-preferences-file-chooser.c  gy-preferences-file-chooser.h  gy-preferences-page-dicts.c  gy-preferences-page-dicts.h  gy-preferences-page-general.c  gy-preferences-page-general.h  gy-preferences-page.h  gy-preferences-switch.h  gy-preferences-window.c  gy-preferences-window.h  gy-prefs-configurable.c  gy-prefs-configurable.h  gy-prefs-plugin-row.c  gy-prefs-plugin-row.h  gy-prefs-view-addin.c  gy-prefs-view-addin.h  gy-prefs-view.c  gy-prefs-view.h  gy-prefs-window.c  gy-prefs-window.h  meson.build
src/libgydict/printing/: gy-print-compositor.h  gy-print.c  gy-print.h  meson.build
src/libgydict/resources/: gy.gresource.xml
src/libgydict/search/: gy-search-bar.c  gy-search-bar.h  meson.build
src/libgydict/services/: gy-dict-formatter-service.c  gy-dict-formatter-service.h  gy-dict-formatter.c  gy-dict-formatter.h  gy-dict-service.c  gy-dict-service.h  gy-service-provider.c  gy-service-provider.h  gy-service.c  gy-service.h  meson.build
src/plugins/: meson.build
src/resources/ui/: gydict.ui  (+6 more)
src/tests/: meson.build  test-attributes.c  test-dict-manager.c  test-hello.c  test-observer.c  test-panel-gtk.c
tests/: Makefile.am  meson.build  test-dict-manager.c  test-header-bar.c  test-hello.c  test-history.c  test-observable.c  test-observer.h  test-panel-gtk.c  test-panel-gtk.ui
(+47 files in other folders)
